fix text wrap issue

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -27,6 +27,10 @@ time {
     color: var(--main-fg);
 }
 
+p {
+    overflow-wrap: break-word;
+}
+
 h1 {
     text-align: center;
 }
